fixed little bug that image is dislocated